3_AnalisadorSintatico/ParserExemplo/Parser.output
Gramática

    0 $accept: Procedure $end

    1 $@1: %empty

    2 Procedure: PROCEDURE IDENTIFIER BLOCK $@1 Parts ENDBLOCK

    3 Parts: %empty
    4      | Parts Part

    5 $@2: %empty

    6 Part: IDENTIFIER BLOCK $@2 Keywords ENDBLOCK

    7 Keywords: %empty
    8         | Keywords Keyword

    9 Keyword: IDENTIFIER


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
IDENTIFIER (258) 2 6 9
PROCEDURE (259) 2
BLOCK (260) 2 6
ENDBLOCK (261) 2 6


Não terminais com as regras onde eles aparecem

$accept (7)
    à esquerda: 0
Procedure (8)
    à esquerda: 2, à direita: 0
$@1 (9)
    à esquerda: 1, à direita: 2
Parts (10)
    à esquerda: 3 4, à direita: 2 4
Part (11)
    à esquerda: 6, à direita: 4
$@2 (12)
    à esquerda: 5, à direita: 6
Keywords (13)
    à esquerda: 7 8, à direita: 6 8
Keyword (14)
    à esquerda: 9, à direita: 8


Estado 0

    0 $accept: . Procedure $end

    PROCEDURE  deslocar, e ir ao estado 1

    Procedure  ir ao estado 2


Estado 1

    2 Procedure: PROCEDURE . IDENTIFIER BLOCK $@1 Parts ENDBLOCK

    IDENTIFIER  deslocar, e ir ao estado 3


Estado 2

    0 $accept: Procedure . $end

    $end  deslocar, e ir ao estado 4


Estado 3

    2 Procedure: PROCEDURE IDENTIFIER . BLOCK $@1 Parts ENDBLOCK

    BLOCK  deslocar, e ir ao estado 5


Estado 4

    0 $accept: Procedure $end .

    $padrão  aceitar


Estado 5

    2 Procedure: PROCEDURE IDENTIFIER BLOCK . $@1 Parts ENDBLOCK

    $padrão  reduzir usando a regra 1 ($@1)

    $@1  ir ao estado 6


Estado 6

    2 Procedure: PROCEDURE IDENTIFIER BLOCK $@1 . Parts ENDBLOCK

    $padrão  reduzir usando a regra 3 (Parts)

    Parts  ir ao estado 7


Estado 7

    2 Procedure: PROCEDURE IDENTIFIER BLOCK $@1 Parts . ENDBLOCK
    4 Parts: Parts . Part

    IDENTIFIER  deslocar, e ir ao estado 8
    ENDBLOCK    deslocar, e ir ao estado 9

    Part  ir ao estado 10


Estado 8

    6 Part: IDENTIFIER . BLOCK $@2 Keywords ENDBLOCK

    BLOCK  deslocar, e ir ao estado 11


Estado 9

    2 Procedure: PROCEDURE IDENTIFIER BLOCK $@1 Parts ENDBLOCK .

    $padrão  reduzir usando a regra 2 (Procedure)


Estado 10

    4 Parts: Parts Part .

    $padrão  reduzir usando a regra 4 (Parts)


Estado 11

    6 Part: IDENTIFIER BLOCK . $@2 Keywords ENDBLOCK

    $padrão  reduzir usando a regra 5 ($@2)

    $@2  ir ao estado 12


Estado 12

    6 Part: IDENTIFIER BLOCK $@2 . Keywords ENDBLOCK

    $padrão  reduzir usando a regra 7 (Keywords)

    Keywords  ir ao estado 13


Estado 13

    6 Part: IDENTIFIER BLOCK $@2 Keywords . ENDBLOCK
    8 Keywords: Keywords . Keyword

    IDENTIFIER  deslocar, e ir ao estado 14
    ENDBLOCK    deslocar, e ir ao estado 15

    Keyword  ir ao estado 16


Estado 14

    9 Keyword: IDENTIFIER .

    $padrão  reduzir usando a regra 9 (Keyword)


Estado 15

    6 Part: IDENTIFIER BLOCK $@2 Keywords ENDBLOCK .

    $padrão  reduzir usando a regra 6 (Part)


Estado 16

    8 Keywords: Keywords Keyword .

    $padrão  reduzir usando a regra 8 (Keywords)
